# libbridgexpc

./: CMakeLists.txt
cmake/: FindLibevent.cmake
include/bridgexpc/: connection.h  connection_libevent.h  protocol.h
src/: connection.c  connection_libevent.c
